# obs-color-monitor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/containers/fedora-common/: build.sh
.github/containers/fedora-template/: Dockerfile
.github/containers/fedora36/: Dockerfile  build.sh
.github/containers/fedora37/: Dockerfile  build.sh
.github/workflows/: clang-format.yml  codeql.yml  docker-build.yml  main.yml
ci/: ci_includes.cmd.in  ci_includes.sh.in  forum-update-info.json  plugin.spec
ci/linux/: build-ubuntu.sh  install-dependencies-ubuntu.sh  package-ubuntu.sh
ci/macos/: build-macos.sh  change-rpath.sh  install-build-obs-macos.sh  package-dmg.json.template  package-macos.sh
ci/windows/: package-windows.cmd  prepare-windows.cmd
cmake/: ObsPluginHelpers.cmake
data/: common.effect  falsecolor.effect  focuspeaking.effect  histogram.effect  vectorscope.effect  waveform.effect  zebra.effect
data/locale/: en-US.ini  fr-FR.ini  ja-JP.ini  pt-BR.ini  zh-CN.ini
doc/: dock.md  falsecolor.md  focuspeaking.md  global_config.md  histogram.md  vectorscope.md  waveform.md  zebra.md
installer/: installer-Windows.iss.in  installer-macOS.pkgproj.in
packaging/debian/: changelog  control  copyright  rules
packaging/fedora/: obs-studio-plugin-color-monitor.spec
src/: ScopeWidgetInteractiveEventFilter.cpp  ScopeWidgetInteractiveEventFilter.hpp  SurfaceEventFilter.cpp  SurfaceEventFilter.hpp  common-cpp.cc  common.c  common.h  focuspeaking.c  histogram.c  obs-convenience.c  obs-convenience.h  obsgui-helper.hpp  plugin-macros.h.in  plugin-main.c  roi.c  roi.h  scope-dock-new-dialog.cpp  scope-dock-new-dialog.hpp  scope-dock.cpp  scope-dock.hpp  scope-widget-properties.cpp  scope-widget-properties.hpp  scope-widget.cpp  scope-widget.hpp  util-cpp.cc  util.c  util.h  vectorscope.c  waveform.c  zebra.c
src-obsstudio/: properties-view.cpp  properties-view.hpp  qt-wrappers.cpp  qt-wrappers.hpp
test-onsdriver/: test_color_monitor.py
